--- a/src/app/componenets/header/header.component.html
+++ b/src/app/componenets/header/header.component.html
@@ -1,1 +1,24 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" routerLink="/">Task 1</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="grid1" routerLinkActive="active">Grid 1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="grid2" routerLinkActive="active">Grid 2</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="grid3" routerLinkActive="active">Grid 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="grid4" routerLinkActive="active">Grid 4</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
